simple-node-app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodeapp-ingress
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  - host: nodeapp-65.21.235.195.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: nodeapp-svc
            servicePort: 8080
